--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,172 @@
-.App {
+body {
+  background-color: #62BEC1;
+  margin: 0%;
+  padding: 0%;
+  box-sizing: border-box;
+  font-family: 'Amatic SC', cursive;
+}
+
+header {
+  background-color: #2E3837;
+  color: white;
+  height: 4rem;
+  width: 100%;
+  position: fixed;
+  top: 0%;
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+}
+
+.navBar {
+  display: flex;
+  justify-content: space-between;
+  margin-left: 2rem;
+  margin-top: 1rem;
+}
+
+.navBar a,span {
+  color: #ffffff;
+  height: 3rem;
+  padding: 0.5rem;
+  font-size: 1.2rem;
+  text-decoration: none;
+}
+
+.navBar a:hover {
+  background-color: #62BEC1;
+}
+
+.fullscreen-title{
+  height: 100vh;
+  margin: 5rem 5rem 1rem 5rem;
+  font-family: 'Pacifico', cursive;
+  font-size: 1.5em;
+  color: #ffffff;
+  text-shadow: 2px 2px 4px #00000080;
+  letter-spacing: 2px;
+  text-transform: uppercase;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.title {
+  margin: 5rem 5rem 1rem 5rem;
+  font-family: 'Pacifico', cursive;
+  font-size: 2.5em;
+  color: #ffffff;
+  text-shadow: 2px 2px 4px #00000080;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.subtitle {
+  font-family: 'Pacifico', cursive;
+  font-size: 1rem;
+  color: #ffffff;
+  text-shadow: 2px 2px 4px #00000080;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  text-align: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+.card {
+  width: 350px;
+  margin: 1rem 1rem 1rem 1rem;
+  border-radius: 20px;
+  background-color: #404E4D;
+  color: aliceblue;
+  padding: 1rem;
+  box-shadow: 15px 15px  #78918E;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center; 
 }
 
-.App-link {
-  color: #61dafb;
+.card:hover img{
+  filter: blur(5px);
+  transition: 1s ease;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 {
+  font-size: 2rem;
+}
+
+
+.card nav {
+  position: relative;
+  padding: 0.5rem;
+}
+
+img {
+  display: block;
+  width: 100%;
+  width: 300px;
+  height: 300px;
+  border-radius: 20px;
+}
+
+.overlay {
+  position: absolute;
+  bottom: 0;
+  background-color: #00000080;
+  overflow: hidden;
+  width: 100%;
+  height: 0;
+  transition: 1s ease;
+}
+
+nav:hover .overlay {
+  height: 40%;
+  width: 100%;
+  font-size: 1rem;
+  border-radius:20px;
+  text-align: center;
+}
+
+.category{
+  color: #FFC470; 
+  padding-right: 50px;
+  text-align: left;
+}
+.value{
+  text-align: right;
+}
+
+.suggestForm{
+  text-align: center;
+}
+
+.suggestForm textarea{
+  width: 20%;
+  height: 1rem;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  resize: none;
+  font-size: 1rem;
+  background-color: #404E4D;
+  color: aliceblue;
+}
+
+.suggestForm button{
+  padding: 10px 20px;
+  background-color: #404E4D;
+  color: aliceblue;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  text-shadow: 2px 2px 4px #00000080;
+  text-transform: uppercase;
+  text-align: center;
 }
